deploy/base/authentik-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  labels:
    app.kubernetes.io/name: authentik-server
spec:
  selector:
    app.kubernetes.io/name: authentik-server
  ports:
    - name: http
      port: 9000
      targetPort: http
