deploy/base/body.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: body
  labels:
    app.kubernetes.io/name: body
spec:
  selector:
    app.kubernetes.io/name: body
  ports:
    - name: http
      port: 80
      targetPort: http
