deploy/base/brain.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brain
  labels:
    app.kubernetes.io/name: brain
spec:
  selector:
    app.kubernetes.io/name: brain
  ports:
    - name: http
      port: 3001
      targetPort: http
